updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm an aspiring coder, tearing through a rigorous bootcamp to achieve my lofty goals.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from a small town north of Sudbury. We had two convenence stores in town and they doubled as our VHS rental shops.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love playing guitar, singing, playing board games (solo or with like-minded gamers), and spending time with my dog, Pixel.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I strive for a coding job that makes me feel fulfilled and compensates me well.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in North York, Ontario.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love rules, languages, and crave creativity and problem solving in my work. I think this industry suits me!</p>
     </section>
 
     <footer id="footer">
